--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -199,17 +199,21 @@ Start coding here
 }
 
 body {
+  /* Your existing body styles */
   line-height:1;
   line-height:1;
   height: 100%;
   width : 100%;
+  min-height : 100vh;
   background: rgb(255, 255, 255);
   margin: 0; 
+  overflow-x: hidden;
+  overflow-y : scroll;
   font-family: Arial, sans-serif; /* Adjust the font family as needed */
   padding-top: 100px;
 }
   
-.header {
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -217,6 +221,7 @@ body {
   padding: 5px;
   border-bottom: 20px solid rgb(230,124,55); /* Bottom color */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
+  z-index: 1000;
   position: fixed;
   top: 0;
   right: 0;
@@ -299,7 +304,7 @@ body {
 
   
 input[name="q"] {
-    width: 1050px;
+    width: 1060px;
     padding: 6px;
     font-size: 16px;
     border: 2px solid black;
