--- a/static/recents/recentadminstyle.css
+++ b/static/recents/recentadminstyle.css
@@ -193,7 +193,7 @@ body {
     padding: 10px;
   }
   
-  .header {
+  header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -205,6 +205,7 @@ body {
     top: 0;
     right: 0;
     left: 0;
+    z-index: 1000
   }
   
   .logo.left {
