--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -7,7 +7,7 @@
         <title>ADMIN HOME</title>
     <body>
         
-            <div class="header">
+        <header>
             <div class="logo left">
                 <img src="/static/home/adminhome/LSPU.png" alt="Left Logo">
             </div>
@@ -22,7 +22,7 @@
             <div class="logo right">
                 <img src="/static/home/adminhome/CSS.png" alt="Right Logo">
             </div> 
-            </div>
+        </header>
 
         <div class="head"></div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
