--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="header">
+        <header>
         <div class="logo left">
             <img src="/static/home/adminhome/LSPU.png" alt="Left Logo">
         </div>
@@ -23,7 +23,7 @@
         <div class="logo right">
             <img src="/static/home/adminhome/CSS.png" alt="Right Logo">
         </div> 
-    </div>
+    </header>
     <div class="head"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
