--- a/static/admin/adminbase.css
+++ b/static/admin/adminbase.css
@@ -14,6 +14,7 @@ a:link, a:visited {
     color: white;
     font-weight: bold;
 }
+
 #content-related .module h2 {
     color: white;
     font-weight: bold;
@@ -55,14 +56,24 @@ background-color: #EAE7E7;
  background-color: white;
  color: #7A1A22;
 }
+.toggle-nav-sidebar:focus{
+    background-color: white;
+}
+.toggle-nav-sidebar:hover{
+    background-color: #EAE7E7;
+}
 .aligned label{
-background-color: red;
+background-color: #EAE7E7;
 color: black;
+font-weight: 700;
 }
 .required label, label.required {
     font-weight: bold;
-    color: black(--body-fg);
+    color: black !important;
 }
+
+
+
 #header {
     background-color:#7A1A22 ;
     height: 70px;
@@ -75,19 +86,27 @@ div.breadcrumbs {
 }
 
 #changelist .actions {
-    background-color: orange!important;
+    background-color: white!important;
+    width: 1089px !important;
+
 }
 
 #changelist .paginator {
-    background-color: violet!important;
+    background-color: white!important;
+    color: black !important;
+    font-weight: 600;
+    width: 1089px;
 }
 
 #changelist .actions select {
-    background-color: aquamarine;
+    background-color: white;
+    color: black !important;
 }
 
 #changelist .actions .button {
-    background-color: blueviolet!important;
+    background-color: white!important;
+    color: black !important;
+    font-weight: 500;
 }
 
 thead th {
@@ -111,26 +130,30 @@ thead th {
 
 
 #toolbar {
-    background-color: green!important;
+    background-color: #EAE7E7!important;
 }
 
 :root {
-    --body-bg: greenyellow;
+    --body-bg: #EAE7E7;
     --selected-row: #EAE7E7;
-    
 }
 
 .submit-row {
-    background-color: blue!important;
+    background-color: #EAE7E7!important;
 }
 
 .button, input[type=submit], input[type=button], .submit-row input, a.button {
-    background-color: aquamarine;
+    background-color: white;
+    color: black;
+    font-weight: bold;
 }
 
 .button.default, input[type=submit].default, .submit-row input.default {
-    background-color: greenyellow;
+    background-color: white;
+    color: black;
+    font-weight: bold;
 }
+
 
 .form-row {
     background-color: #EAE7E7;
@@ -139,29 +162,42 @@ thead th {
 .selector .selector-available h2 {
     background-color: brown!important;
     font-weight: 500;
+    color: white !important;
+   
 }
 
 .selector-chosen h2 {
     background-color: brown!important;
     font-weight: 500;
 }
+a.selector-chooseall, a.selector-clearall{
+    color: black !important;
+    opacity: 1 !important;
+}
 
 .form-row img, .form-row input {
-    background-color: black;
-}
-
-.selector select {
-    background-color: black;
-}
-
-.selector-chooser li {
-    background-color: #DAA2A7;
-}
-
-
-input[type=text], input[type=password], input[type=email], input[type=url], input[type=number], input[type=tel], textarea, select, .vTextField {
     background-color: white;
 }
+a img{
+    border: 2px solid black;
+    background-color: white; 
+}
+.aligned .form-row input{
+    color: black;
+    font-weight: 500;
+}
+.selector select {
+    background-color: white;
+    color: black;
+}
+.selector-chooser li {
+    background-color: white;
+}
+input[type=text], input[type=password], input[type=email], input[type=url], input[type=number], input[type=tel], textarea, select, .vTextField {
+    background-color: white;
+    color: black;
+}
+
 
 .module h2, .module caption, .inline-group h2 {
     background-color: orange;
@@ -170,4 +206,51 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
 #changelist-filter {
     background-color: red!important;
 }
-
+a.active.selector-chooseall, a.active.selector-clearall{
+    color: black !important;
+    
+}
+.help, p.help, form p.help, div.help, form div.help, div.help li {
+    color: black;
+    font-weight: 500;
+    
+}
+.errornote{
+    background-color: white;
+}
+p{
+    color: black;
+}
+#toolbar #searchbar{
+    color: black;
+}
+#toolbar form input[type="submit"]{
+    color: black !important;
+    background-color: white !important;
+}
+#changelist .actions label{
+    color: black !important;
+    font-weight: bold;
+}
+#changelist .actions span.all, #changelist .actions span.action-counter, #changelist .actions span.clear, #changelist .actions span.question{
+    color: black !important;
+    font-weight: 500;
+    
+}
+table thead th .text span{
+    color: #7A1A22;
+    font-weight: bold;
+    background-color: #EAE7E7;
+}
+th{
+    background-color: #EAE7E7;
+}
+#changelist table tbody td.action-checkbox{
+    background-color: #EAE7E7;
+}
+.button:active, input[type=submit]:active, input[type=button]:active, .button:focus, input[type=submit]:focus, input[type=button]:focus, .button:hover, input[type=submit]:hover, input[type=button]:hover{
+    background-color: #d4d4d4;
+}
+.button.default:active, input[type=submit].default:active, .button.default:focus, input[type=submit].default:focus, .button.default:hover, input[type=submit].default:hover{
+    background-color: #d4d4d4;
+}
