--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -18,7 +18,7 @@
             </div>
             <div class="logo right">
                 <img src="static/unreturned/unreturnedadmin/CSS.png" alt="Right Logo">
-            </div> 
+            </div>
         </header>
         <div class="head"></div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,7 +32,7 @@
             </div>
         </nav>
         </div>
-        
+
         <div id="mainForm" class="form">
         <div id="container" class="rounded_corners">
 
@@ -60,12 +60,12 @@
                     </div>
                 </div>
                 <div id="bottom">
-                    
+
                 </div>
                 <div class="recent-lines">
                     <div id="btn_con">
                         <button id="return_btn" class="rounded_corners">
-                        <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id %}">Return</a></button>
+                        <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id item.item_borrowed.borrow_form_id %}">Return</a></button>
                     </div>
                 </div>
             </div>
